# task_with_rabbitmq

./: .env-example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/: __init__.py
backend/service/: Dockerfile  __main__.py  requirements.txt  schema.py  send.py
db/: __init__.py
frontend/: __init__.py  index.html  styles.css
rabbitmq/: Dockerfile  __init__.py  cluster_entrypoint.sh  init.sh  rabbitmq-env.conf  rabbitmq.config
servicedb/: __init__.py
servicedb/migrations/: env.py
servicedb/migrations/versions/: 3df61c03aa9c_initial.py  4c7b2d0a53a4_initial.py
servicedb/service/: Dockerfile  __main__.py  config.py  models.py  rabbitmq_reseiver.py  requirements.txt
servicedb/service/db/: db_config.py  db_settings.py
