[tool.poetry]
name = "task-with-rabbitmq"
version = "0.1.0"
description = ""
authors = ["alina1412 <alina-junior-msk@mail.ru>"]
readme = "README.md"
packages = [{include = "task_with_rabbitmq"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "8.1.3"
colorama = "0.4.6"
databases = "0.6.2"
fastapi = "0.87.0"
greenlet = "2.0.1"
h11 = "0.14.0"
httptools = "0.5.0"
idna = "3.4"
psycopg2-binary = "2.9.5"
pydantic = "1.10.2"
python-dotenv = "0.21.0"
PyYAML = "6.0"
sniffio = "1.3.0"
SQLAlchemy = "1.4.41"
starlette = "0.21.0"
typing-extensions = "4.4.0"
uvicorn = {version = "0.20.0", extras = ["standard"]}
watchfiles = "0.18.1"
websockets = "10.4"
pika = "1.3.1"
asyncpg = "0.27.0"
alembic = "1.8.1"
tornado = "6.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.10.0"
pylint = "^2.15.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
